infrastructure/argocd/grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
spec:
  parentRefs:
    - name: default
      namespace: default
      sectionName: https
  hostnames:
    - "argocd.home.arpa"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
      matches:
        - headers:
            - name: Content-Type
              type: RegularExpression
              value: "^application/grpc.*$"
