infrastructure/argocd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
spec:
  parentRefs:
    - name: default
      namespace: default
      sectionName: https
  hostnames:
    - "argocd.home.arpa"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
